--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My first repo</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, consequuntur.</h1>
 </body>
 </html>
