--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My first repo</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, consequuntur.</h1>
+    <h1>I Hobe my problem is solved! inshallah.</h1>
+    <p></p>
 </body>
 </html>
