--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>I Hobe my problem is solved! inshallah.</h1> 
-    <p>Again Try</p>
-    <h2>Allhamdulillah solved this problem. </h2>
+<body> 
+    <div class="header">
+        <h2>Allhamdulillah </h2>
+        <span>Finally i am successful</span>
+    </div>
+    <div class="body">
+        <img src="me.jpg" alt="">
+        <h3>Md Emon Mahdi</h3>
+        <span>Web Developer</span>
+    </div>
+    
 </body>
 </html>
